--- a/assets/design-system/css/footer.scss
+++ b/assets/design-system/css/footer.scss
@@ -4,7 +4,7 @@
   FOOTER
 ***************************************************************/
 footer {
-  background: #005A86;
+  background: #954890;
   color: var(--color-white);
   padding: 10px 15px;
   height: 40px;
